updated icons and created splash screen

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="static/css/nav.css">
 
     
 </head>
@@ -29,7 +29,7 @@
         <div class="container">
             <div class="navbar-header">
                 <a class="navbar-brand" href="index.html">
-                    <img alt="Brand" src="static/images/favicon.png">
+                    <img alt="Brand" src="static/images/favicon-brand.png">
                 </a>
 
             </div>
