api.ai created and functional for chatbot

--- a/ChatBot/index.html
+++ b/ChatBot/index.html
@@ -24,6 +24,9 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
     <script type="text/javascript">
 
+    var accessToken = "427fba490ee242f5b6081ce0fd8bd27a",
+    baseUrl = "https://api.api.ai/v1/";
+
     function writeToChatbox(sender, message) {
         var chatbox = $("#chatbox");
         var start = chatbox[0].innerText;
@@ -37,16 +40,34 @@
     function messageReceived(text) {
         var chatbox = $("#chatbox");
         console.log("Received "+text);
-        writeToChatbox("Chatbot", text);
+        //writeToChatbox("Chatbot", text);
     }
 
     function send(text) {
+        console.log(JSON.stringify({query: text, lang: "en", sessionId: "stealth"}));
         var chatbox = $("#chatbox");
         writeToChatbox("You", text);
         console.log("Sending "+text);
-        // $.post({data}, function(data) {
+          $.ajax({
+            type: "POST",
+            url: baseUrl + "query",
+            contentType: "application/json; charset=utf-8",
+            dataType: "json",
+            beforeSend: function(request) {
+              request.setRequestHeader("Authorization", "Bearer " + accessToken);
+            },
+            data: JSON.stringify({query: text, lang: "en", sessionId: "stealth", v: 20150910}),
 
-        // })
+            success: function(data) {
+              // prepareResponse(data);
+              console.log(data.result.speech);
+              writeToChatbox("Chatbot", data.result.speech);
+
+            },
+            error: function() {
+              console.log("meep");
+            }
+          });
         window.setTimeout(function() {
             messageReceived(text);
         }, 500);
