renamed chatbot files

--- a/ChatBot/indexChat.html
+++ b/ChatBot/indexChat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <title>Chat - Customer Module</title>
-<link type="text/css" rel="stylesheet" href="style.css" />
+<link type="text/css" rel="stylesheet" href="styleChat.css" />
 </head>
     <body>
     <div id="wrapper">
